# AI-litsearch-machine

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  aggregate.py  aggregator.py  build_embeddings.py  create_embeddings.py  ingestion_log.jsonl  pipeline.py  pyproject.toml  requirements.txt  run_pipeline.py  run_smoke_test.py  run_validation.py
agent1/: metadata_extractor.py  openai_client.py  run.py
agent2/: embeddings.py  narrative_validator.py  openai_index.py  openai_narrative.py  retrieval.py  synthesiser.py  vector_index.py
agent3/: compare_masters.py  json_matcher.py  openai_validator.py  write_validated_master.py
cli/: resolve_conflicts.py
data/: index.faiss  index.meta.json
docs/: HOW_TO_ADD_NEW_DRUG.md  TASKS.md  performance.md
extract/: pdf_to_text.py
ingest/: collector.py  list_pdfs.py
prompts/: agent1_prompt.txt  agent1_prompt_DEPRECATED.txt  agent2_system.txt  agent3_system.txt
schemas/: metadata.py
tests/: conftest.py  openai_test_utils.py  test_aggregate.py  test_aggregate_helpers.py  test_aggregator.py  test_list_pdfs.py  test_metadata_extractor.py  test_network_access.py  test_openai_api_connection.py  test_openai_client.py  test_openai_json_caller_live.py  test_openai_validator.py  test_pdf_to_text.py  test_pipeline.py  test_pipeline_integration.py  test_resolve_conflicts_cli.py  test_run_pipeline_cli.py  test_run_validation_cli.py  test_schema_drift.py  test_utils_secrets.py  test_wipe_data.py  test_z_pipeline.py
utils/: data_wipe.py  json_validator.py  logger.py  master_diff.py  master_loader.py  (+1 more)
(+57 files in other folders)
